--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="img-fluid d-md-none" src="./imagens/banner1/banner1-mobile.webp" width="576" height="400"
+                    <img class="img-fluid d-md-none" src="./imagens/banner1/banner1-mobile.png" width="576" height="400"
                         alt="Modelo feminina com blusa verde apontando para texto ao lado direito: A melhor banda larga do Brasil agora conta com mais postos de atendimento!">
                     <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner1/banner1-tablet.webp"
                         width="992" height="400"
@@ -66,7 +66,8 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="img-fluid d-md-none" src="./imagens/banner2/banner2-mobile.webp" width="576" height="400"
+                    <img class="img-fluid d-md-none" src="./imagens/banner2/banner2-mobile.webp" width="576"
+                        height="400"
                         alt="Texto acima: Wi-fi que conecta toda sua casa  de graça! imagem de roteador ao centro e a baixo texto: mediante a assinatura de qualquer um dos planos disponibilizados.">
                     <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner2/banner2-tablet.webp"
                         width="992" height="400"
@@ -77,7 +78,8 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="img-fluid d-md-none" src="./imagens/banner3/banner3-mobile.webp" width="576" height="400"
+                    <img class="img-fluid d-md-none" src="./imagens/banner3/banner3-mobile.webp" width="576"
+                        height="400"
                         alt="Texto a cima: Reuniões com toda equipe sem travar! e abaixo 3 mulher e 2 homens em quadrados a direita.">
                     <img class="img-fluid d-none d-md-block d-xl-none" src="./imagens/banner3/banner3-tablet.webp"
                         width="992" height="400"
@@ -179,14 +181,14 @@
                     <div class="col-12 col-md-12 col-lg-6">
 
                         <div class="img-status">
-                            <img class="img-fluid d-none d-xl-block" width="360" height="240"
-                                src="./imagens/ilustra-planos/ilustra-status-lg.svg"
+                            <img class="img-fluid d-none d-xl-block" width="500" height="240"
+                                src="./imagens/ilustra-planos/ilustra-status-lg.png"
                                 alt="Mulher em pé verificando o celular com mensagen de texto.">
                             <img class="img-fluid d-none d-md-block d-xl-none" width="696" height="240"
-                                src="./imagens/ilustra-planos/ilustra-status-md.svg"
+                                src="./imagens/ilustra-planos/ilustra-status-md.png"
                                 alt="Mulher em pé verificando o celular com mensagen de texto.">
                             <img class="img-fluid d-md-none" width="636" height="240"
-                                src="./imagens/ilustra-planos/ilustra-status-sm.svg"
+                                src="./imagens/ilustra-planos/ilustra-status-sm.png"
                                 alt="Mulher em pé verificando o celular com mensagen de texto.">
                         </div>
 
@@ -207,24 +209,33 @@
                 </div>
             </div>
         </div>
+
     </main>
+
 
     <footer class="text-left">
         <section class="container p-4 pb-2 mb-4 d-flex justify-content-around">
             <a class="btn" href="index.html"><img class="d-none d-md-block d-xl-block"
                     src="imagens/logos/conexos-logo-footer.png" width="149" height="108" alt="Logo Conexos"></a>
 
-            <p class="fs-small fw-lighter text-justify">Empresa criada visando a diversidade dos clientes.
+            <p class="fs-small fw-lighter text-justify p-2">Empresa criada visando a diversidade dos clientes.
                 Acreditamos que apresentando de maneira simples os benefícios de cada plano, fica a total
                 escolha do cliente, com um sistema simples para solicitar.</p>
 
-            <ul class="text-left">
-                <li><a href="index.html">Início</a></li>
-                <li><a href="bronze.html">Bronze</a></li>
-                <li><a href="prata.html">Prata</a></li>
-                <li><a href="ouro.html">Ouro</a></li>
-                <li><a href="status.html">Status de solicitações</a></li>
-            </ul>
+                <ul class="fw-bold p-0"> 
+                <li> 
+                    <div class="dropup">
+                    <button class="dropbtn fw-bold">Planos</button>
+                    <div class="dropup-content">
+                        <a href="bronze.html">Bronze</a>
+                        <a href="prata.html">Prata</a>
+                        <a href="ouro.html">Ouro</a>
+                    </div>
+                  </div> 
+                </li>
+                  <li><a href="status.html">Status</a></li> 
+                  <li><a href="index.html">Início</a></li>
+                </ul>
         </section>
 
         <div class="copyright">
