--- a/status.html
+++ b/status.html
@@ -20,8 +20,7 @@
             <div class="row">
                 <div class="col d-flex justify-content-between align-content-center">
                     <a href="index.html" class="logo-link"><img src="imagens/logos/logo-header.svg" width="150"
-                        height="70" alt="Logo Conexos"
-                            class="logo-header"></a>
+                            height="70" alt="Logo Conexos" class="logo-header"></a>
                     <nav>
                         <ul class="menu">
                             <li> <a href="index.html">Início</a> </li>
@@ -67,7 +66,7 @@
                                 <div class="card-body">
                                     <n3 class="card-title"><strong>código de verificação</strong></h3>
                                         <p class="card-text"></p>
-                                        <a href="#" class="btn btn-primary">verificar status</a>
+                                        <a href="#" class="btn btn-success mt-2">verificar status</a>
                                 </div>
                             </div>
                         </div>
@@ -82,16 +81,24 @@
             <a class="btn" href="index.html"><img class="d-none d-md-block d-xl-block"
                     src="imagens/logos/conexos-logo-footer.png" width="149" height="108" alt="Logo Conexos"></a>
 
-            <p class="fs-small fw-lighter text-justify">Empresa criada visando a diversidade dos clientes.
+            <p class="fs-small fw-lighter text-justify p-2">Empresa criada visando a diversidade dos clientes.
                 Acreditamos que apresentando de maneira simples os benefícios de cada plano, fica a total
                 escolha do cliente, com um sistema simples para solicitar.</p>
 
-            <ul class="text-left">
-                <li><a href="index.html">Início</a></li>
-                <li><a href="bronze.html">Bronze</a></li>
-                <li><a href="prata.html">Prata</a></li>
-                <li><a href="ouro.html">Ouro</a></li>
-            </ul>
+                <ul class="fw-bold p-0"> 
+                <li> 
+                    <div class="dropup">
+                    <button class="dropbtn fw-bold">Planos</button>
+                    <div class="dropup-content">
+                        <a href="bronze.html">Bronze</a>
+                        <a href="prata.html">Prata</a>
+                        <a href="ouro.html">Ouro</a>
+                    </div>
+                  </div> 
+                </li>
+                  <li><a href="status.html">Status</a></li> 
+                  <li><a href="index.html">Início</a></li>
+                </ul>
         </section>
 
         <div class="copyright">
