--- a/prata.html
+++ b/prata.html
@@ -83,7 +83,7 @@
             <div class="card" style="width: 40rem;">
                 <div class="card-body my-2">
                     <form>
-                        <h1 class="Titulo-form-plano my-2">Contratação do plano</h1>
+                        <h1 class="Titulo-form-plano my-2" style="color: #276328">Contratação do plano</h1>
                         <div class="card-text">
                             <div class="col-5">
                                 <div class="mb-3">
@@ -141,16 +141,24 @@
             <a class="btn" href="index.html"><img class="d-none d-md-block d-xl-block"
                     src="imagens/logos/conexos-logo-footer.png" width="149" height="108" alt="Logo Conexos"></a>
 
-            <p class="fs-small fw-lighter text-justify">Empresa criada visando a diversidade dos clientes.
+            <p class="fs-small fw-lighter text-justify p-2">Empresa criada visando a diversidade dos clientes.
                 Acreditamos que apresentando de maneira simples os benefícios de cada plano, fica a total
                 escolha do cliente, com um sistema simples para solicitar.</p>
 
-            <ul class="text-left">
-                <li><a href="index.html">Início</a></li>
-                <li><a href="bronze.html">Bronze</a></li>
-                <li><a href="ouro.html">Ouro</a></li>
-                <li><a href="status.html">Status de solicitações</a></li>
-            </ul>
+                <ul class="fw-bold p-0"> 
+                <li> 
+                    <div class="dropup">
+                    <button class="dropbtn fw-bold">Planos</button>
+                    <div class="dropup-content">
+                        <a href="bronze.html">Bronze</a>
+                        <a href="prata.html">Prata</a>
+                        <a href="ouro.html">Ouro</a>
+                    </div>
+                  </div> 
+                </li>
+                  <li><a href="status.html">Status</a></li> 
+                  <li><a href="index.html">Início</a></li>
+                </ul>
         </section>
 
         <div class="copyright">
