--- a/bronze.html
+++ b/bronze.html
@@ -174,7 +174,7 @@
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>  
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-        <script src="script.js"></script>
+        <script src="script-js/script-form.js"></script>
 </body>
 
 </html>
