--- a/ouro.html
+++ b/ouro.html
@@ -88,7 +88,7 @@
                             <div class="col-5">
                                 <div class="mb-3">
                                     <label for="nome" class="form-label col-form-label-sm my-3">Nome Completo</label>
-                                    <input type="nome" class="form-control" id="Nome">
+                                    <input type="nome" class="form-control" id="nome">
                                 </div>
                                 <div class="mb-3">
                                     <label for="cpf" class="form-label col-form-label-sm">CPF</label>
@@ -173,6 +173,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
+        <script src="script-js/script-form.js"></script>
 </body>
 
 </html>
