--- a/prata.html
+++ b/prata.html
@@ -123,7 +123,7 @@
                                 </div>
                                 <div class="mb-3">
                                     <div class="d-grid gap">
-                                        <button class="btn btn-success border-0" type="button">Contratar</button>
+                                        <button id= "submitbtn" class="btn btn-success border-0" type="button">Contratar</button>
                                     </div>
                                 </div>
                             </div>
