--- a/status.html
+++ b/status.html
@@ -66,7 +66,7 @@
                                 <div class="card-body">
                                     <n3 class="card-title"><strong>código de verificação</strong></h3>
                                         <p class="card-text fs-small fw-lighter" id="id-value"></p>
-                                        <a href="#" class="btn btn-success mt-2" id="open-modal-button">verificar status</a>
+                                        <a href="#" class="btn btn-success mt-2" id="submitbtn">verificar status</a>
                     
                                         <div id="status-modal" class="modal">
                                             <div class="modal-content">
